--- a/code_alongs/03_linear_regression/linear_regression.ipynb
+++ b/code_alongs/03_linear_regression/linear_regression.ipynb
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "b0f6705f",
    "metadata": {},
    "outputs": [
@@ -588,10 +588,535 @@
     }
    ],
    "source": [
-    "X, y = df.drop(\"sales\", axis=1), df[\"sales\"]\n",
+    "X, y = df.drop(\"sales\", axis=\"columns\"), df[\"sales\"]\n",
     "\n",
     "X.head(3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14ed95e3",
+   "metadata": {},
+   "source": [
+    "### 1. train|test split, alternatively train|validation|test split\n",
+    "\n",
+    "- Possible to do manually, but scikit has this implemented off the shelf that we can use\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "baeed372",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train.shape = (134, 3)\n",
+      "X_test.shape = (66, 3)\n",
+      "y_train.shape = (134,)\n",
+      "y_test.shape = (66,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.33, random_state=42\n",
+    ")\n",
+    "\n",
+    "print(f\"{X_train.shape = }\")\n",
+    "print(f\"{X_test.shape = }\")\n",
+    "print(f\"{y_train.shape = }\")\n",
+    "print(f\"{y_test.shape = }\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2715c185",
+   "metadata": {},
+   "source": [
+    "### 2. scale dataset (some algorithms don´t need scaling)\n",
+    "\n",
+    "common scaling techniques\n",
+    "- min-max also called normalization\n",
+    "- feature standardization\n",
+    "\n",
+    "- $X' = \\frac{X-X_{min}}{X_{max}-X_{min}}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "53952b53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TV</th>\n",
+       "      <th>radio</th>\n",
+       "      <th>newspaper</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>293.6</td>\n",
+       "      <td>27.7</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>18.7</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>23.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>134.3</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>9.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>25.6</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>9.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>100.4</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>29.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>204.1</td>\n",
+       "      <td>32.9</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>217.7</td>\n",
+       "      <td>33.5</td>\n",
+       "      <td>59.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>165.6</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>17.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>280.2</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>21.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>134 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        TV  radio  newspaper\n",
+       "43   293.6   27.7        1.8\n",
+       "190   18.7   12.1       23.4\n",
+       "91   134.3    4.9        9.3\n",
+       "137   25.6   39.0        9.3\n",
+       "52   100.4    9.6        3.6\n",
+       "..     ...    ...        ...\n",
+       "107   25.0   11.0       29.7\n",
+       "15   204.1   32.9       46.0\n",
+       "93   217.7   33.5       59.0\n",
+       "180  165.6   10.0       17.6\n",
+       "103  280.2   10.1       21.4\n",
+       "\n",
+       "[134 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "1f630566",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.45180927, 0.09879032, 0.08946322])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(X_train)\n",
+    "\n",
+    "scaled_X_train = scaler.transform(X_train)\n",
+    "scaled_X_test = scaler.transform(X_test)\n",
+    "\n",
+    "scaled_X_train[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "2f904bd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.0), np.float64(1.0))"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled_X_train.min(), scaled_X_train.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9ff7694d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.005964214711729622), np.float64(1.1302186878727631))"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled_X_test.min(), scaled_X_test.max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d40cd11",
+   "metadata": {},
+   "source": [
+    "### 3. fit algorithm with training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e7af0a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(2.79115951962436), array([13.20747617,  9.75285112,  0.61108329]))"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(scaled_X_train, y_train)      # Vi lägger in facit\n",
+    "\n",
+    "model.intercept_, model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "799c0681",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TV           163.3\n",
+       "radio         31.6\n",
+       "newspaper     52.9\n",
+       "Name: 96, dtype: float64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96a8092c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.54988164, 0.63709677, 0.52286282])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TV, radio, newspaper but scaled\n",
+    "\n",
+    "test_sample_feature = scaled_X_test[0]\n",
+    "\n",
+    "test_sample_feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "31a1c37c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(13.207476171093168)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = model.coef_\n",
+    "w0 = model.intercept_\n",
+    "\n",
+    "w[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d59df181",
+   "metadata": {},
+   "source": [
+    "### Manual prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "a920ea39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prediction on the test sample\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(16.586730852231774)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = model.coef_\n",
+    "w0 = model.intercept_\n",
+    "\n",
+    "print(\"prediction on the test sample\")\n",
+    "w0 + w[0]*test_sample_feature[0] + w[1]*test_sample_feature[1] + w[2]*test_sample_feature[2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cdaf428",
+   "metadata": {},
+   "source": [
+    "### 4. Predict on test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "1485fead",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([16.58673085, 21.18622524, 21.66752973, 10.81086512, 22.25210881,\n",
+       "       13.31459455, 21.23875284,  7.38400509, 13.43971113, 15.19445383,\n",
+       "        9.01548612,  6.56945204, 14.4156926 ,  8.93560138,  9.56335776,\n",
+       "       12.10760805,  8.86091137, 16.25163621, 10.31036304, 18.83571624,\n",
+       "       19.81058732, 13.67550716, 12.45182294, 21.58072583,  7.67409148,\n",
+       "        5.67090757, 20.95448184, 11.89301758,  9.13043149,  8.49435255,\n",
+       "       12.32217788,  9.99097553, 21.71995241, 12.64869606, 18.25348116,\n",
+       "       20.17390876, 14.20864218, 21.02816483, 10.91608737,  4.42671034,\n",
+       "        9.59359543, 12.53133363, 10.14637196,  8.1294087 , 13.32973122,\n",
+       "        5.27563699,  9.30534511, 14.15272317,  8.75979349, 11.67053724,\n",
+       "       15.66273733, 11.75350353, 13.21744723, 11.06273296,  6.41769181,\n",
+       "        9.84865789,  9.45756213, 24.32601732,  7.68903682, 12.30794356,\n",
+       "       17.57952015, 15.27952025, 11.45659815, 11.12311877, 16.60003773,\n",
+       "        6.90611478])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(scaled_X_test)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcab5d42",
+   "metadata": {},
+   "source": [
+    "### 5. Evaluate performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b8c3e7",
+   "metadata": {},
+   "source": [
+    "How well did we predict $\\bf{y}$ (label) with $\\hat{\\bf{y}}$ (y_pred)?\n",
+    "\n",
+    "To answer this question we use several **evaluation metrics** or **loss functions**: \n",
+    "\n",
+    "- Mean Absolute Error (MAE) - mean of error between $\\bf{y}$ and ${\\hat{\\bf{y}}}$. The unit is same as measured quantity.\n",
+    "\n",
+    "$$MAE = \\frac{1}{m}\\sum_{i=1}^m |y_i - \\hat{y}_i|$$\n",
+    "\n",
+    "- Mean Squared Error (MSE) - mean of squared errors between $\\bf{y}$ and ${\\hat{\\bf{y}}}$. It punishes large errors, and the units are in square units of the measured quantity\n",
+    "\n",
+    "$$MSE = \\frac{1}{m}\\sum_{i=1}^m (y_i - \\hat{y}_i)^2$$\n",
+    "\n",
+    "- Root Mean Squared Error (RMSE) - square root of MSE between $\\bf{y}$ and ${\\hat{\\bf{y}}}$. It punishes large errors, and the units are same as measured quantity, hence easier to interpret.\n",
+    "\n",
+    "$$RMSE = \\sqrt{\\frac{1}{m}\\sum_{i=1}^m (y_i - \\hat{y}_i)^2}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "60e71157",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.4937750024728984, 3.72792833068152, np.float64(1.9307843822347228))"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "import numpy as np\n",
+    "\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "mae, mse, rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "375243f8",
+   "metadata": {},
+   "source": [
+    "### Take the evaluation metrics and compare it to other models\n",
+    "\n",
+    "exemple (påhittade värden)\n",
+    "- linear regression gave us RMSE = 1.93\n",
+    "- random forest gave us RMSE = 1.75\n",
+    "\n",
+    "--> choose random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2519860",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
