--- a/code_alongs/03_linear_regression/linear_regression.ipynb
+++ b/code_alongs/03_linear_regression/linear_regression.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
    "id": "ddc9e119",
    "metadata": {},
    "outputs": [
@@ -85,71 +85,20 @@
        "      <td>58.4</td>\n",
        "      <td>12.9</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>38.2</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>13.8</td>\n",
-       "      <td>7.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>94.2</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>9.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>177.0</td>\n",
-       "      <td>9.3</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>12.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>283.6</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>66.2</td>\n",
-       "      <td>25.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>232.1</td>\n",
-       "      <td>8.6</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>13.4</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>200 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        TV  radio  newspaper  sales\n",
-       "1    230.1   37.8       69.2   22.1\n",
-       "2     44.5   39.3       45.1   10.4\n",
-       "3     17.2   45.9       69.3    9.3\n",
-       "4    151.5   41.3       58.5   18.5\n",
-       "5    180.8   10.8       58.4   12.9\n",
-       "..     ...    ...        ...    ...\n",
-       "196   38.2    3.7       13.8    7.6\n",
-       "197   94.2    4.9        8.1    9.7\n",
-       "198  177.0    9.3        6.4   12.8\n",
-       "199  283.6   42.0       66.2   25.5\n",
-       "200  232.1    8.6        8.7   13.4\n",
-       "\n",
-       "[200 rows x 4 columns]"
+       "      TV  radio  newspaper  sales\n",
+       "1  230.1   37.8       69.2   22.1\n",
+       "2   44.5   39.3       45.1   10.4\n",
+       "3   17.2   45.9       69.3    9.3\n",
+       "4  151.5   41.3       58.5   18.5\n",
+       "5  180.8   10.8       58.4   12.9"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +108,7 @@
     "\n",
     "df = pd.read_csv(\"Advertising.csv\", index_col=0)\n",
     "\n",
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -808,6 +757,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "id": "8bc3e8d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TV</th>\n",
+       "      <th>radio</th>\n",
+       "      <th>newspaper</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>29.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>204.1</td>\n",
+       "      <td>32.9</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>217.7</td>\n",
+       "      <td>33.5</td>\n",
+       "      <td>59.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>165.6</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>17.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>280.2</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>21.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        TV  radio  newspaper\n",
+       "107   25.0   11.0       29.7\n",
+       "15   204.1   32.9       46.0\n",
+       "93   217.7   33.5       59.0\n",
+       "180  165.6   10.0       17.6\n",
+       "103  280.2   10.1       21.4"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 51,
    "id": "2f904bd2",
    "metadata": {},
@@ -877,7 +911,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "model = LinearRegression()\n",
-    "model.fit(scaled_X_train, y_train)      # Vi lägger in facit\n",
+    "model.fit(scaled_X_train, y_train)     \n",
     "\n",
     "model.intercept_, model.coef_"
    ]
@@ -1070,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "60e71157",
    "metadata": {},
    "outputs": [
